third_party/move/tools/move-decompiler/tests/compiler-v2-test/skip_attribute_checks/attribute_placement.exp
module 0x42::N {
    public fun bar() {
        ()
    }
}

module 0x42::M {
    use 0x42::N;
    struct S {
    }
    public fun foo() {
        N::bar();
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
    use 0x42::M;
    public entry fun <SELF>_0() {
        M::foo();
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
   ┌─ attribute_placement.move:16:76
   │
16 │ module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
   │                                                                            ^
   │                                                                            │
   │                                                                            Unexpected '<'
   │                                                                            Expected an identifier
